Update the custom SCSS

--- a/assets/hb/modules/custom/scss/index.scss
+++ b/assets/hb/modules/custom/scss/index.scss
@@ -1,1 +1,7 @@
 // This SCSS styles will be compiled into the CSS bundle automatically.
+
+/*! purgecss start ignore */
+
+/*! PUT YOU STYLE HERE TO AVOID GETTING REMOVING BY PURGECSS. */
+
+/*! purgecss end ignore */
