Update the custom SCSS variables file

--- a/assets/hb/modules/custom/scss/variables.tmpl.scss
+++ b/assets/hb/modules/custom/scss/variables.tmpl.scss
@@ -1,2 +1,4 @@
 // Override the Bootstrap and HB SCSS variables.
+// See https://github.com/twbs/bootstrap/blob/main/scss/_variables.scss.
+// See https://github.com/twbs/bootstrap/blob/main/scss/_variables-dark.scss.
 // $primary: red;
